# routes/api.php
@@ -15,4 +15,5 @@ Route::group([
 ], function () {
     require __DIR__ . '/backoffice/companies.php';
     require __DIR__ . '/backoffice/users.php';
+    require __DIR__ . '/backoffice/accounting-accounts.php';
 });
